V0.4 Content updatet - fixed navbar, fixed navbar collapse, fixed navbarlogo, fixed scrollbar bottom of the screen

--- a/resource/css/custom.css
+++ b/resource/css/custom.css
@@ -1,3 +1,8 @@
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 .navbar .container {
     text-align: center;
 }
@@ -30,10 +35,4 @@
 }
 .navbar-toggler .icon-bar + .icon-bar {
     margin-top: 4px;
-}
-#header-logo {
-    height: 256px;
-}
-body {
-    height: 5000px;
 }
